[project]
name = "sol-dash"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.13",
    "lightgbm>=4.6.0",
    "lime==0.2.0.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "shap==0.48.0",
    "streamlit>=1.46.1",
    "torch>=2.7.1",
    "xgboost>=3.0.2",
]
